updated Brightspace Sample Application to work with remote VPS on SSL
updated Brightspace Sample Application to work with remote VPS on SSL

--- a/content/file-upload/sample-content.html
+++ b/content/file-upload/sample-content.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html>
 <html>
-        <body>
-            <h1>Sample Brightspace Content</h1>
-            <div>This is some sample brightspace content.</div>
-        </body>
+<head>
+</head>
+<body style="font-family: Verdana;font-size: 12pt;color: #494c4e;">
+<p>Uploaded through Brightspace API</p>
+</body>
 </html>
