--- a/html/index.html
+++ b/html/index.html
@@ -12,25 +12,25 @@
             <p>Currently Authenticated Using OAuth 2.0</p>
         </div>
         <div>
-            <a id="idkeyAuth" href="https://localhost:3434/idkeyauth">Authenticate using the ID-Key Authentication System</a>
+            <a id="idkeyAuth" href="https://www.jcarron.ca:3434/idkeyauth">Authenticate using the ID-Key Authentication System</a>
         </div>
         <div>
-            <a id="oauth" href="https://localhost:3434/oauth">Authenticate using OAuth 2.0</a>
+            <a id="oauth" href="https://www.jcarron.ca:3434/oauth">Authenticate using OAuth 2.0</a>
         </div>
         
         <h2>Test Course</h2>
         <p>All APIs are executing against the following course. You can also view all implemented Remote Plugins in the same course.</p>
-        <a href="https://devcop.brightspace.com/d2l/home/6952" target="_blank">Devcop - Extensibility Samples Course (6952)</a>
+        <a href="https://smcdsbtest.desire2learn.com/d2l/home/15914633" target="_blank">ICS4UE-66-Computer Science-Carron --> BL_1920Sem2__CS_ICS4UE-813389_66_ELO</a>
         <h2>Sample Requests</h2>
-        <a href="https://localhost:3434/whoami" target="_blank">Who AM I</a>
+        <a href="https://www.jcarron.ca:3434/whoami" target="_blank">Who AM I</a>
         <br />
-        <a href="https://localhost:3434/finalgrades?orgUnitId=6952" target="_blank">Fetch all Final Grades for an OrgUnit</a>
+        <a href="https://www.jcarron.ca:3434/finalgrades?orgUnitId=15914633" target="_blank">Fetch all Final Grades for an OrgUnit</a>
         <br />
-        <a href="https://localhost:3434/uploadhtmlcontent?orgUnitId=6952&moduleId=1946" target="_blank">Upload an HTML Content File</a>
+        <a href="https://www.jcarron.ca:3434/uploadhtmlcontent?orgUnitId=15914633&moduleId=115468977" target="_blank">Upload an HTML Content File</a>
         <br />
-        <a href="https://localhost:3434/uploadworddocument?orgUnitId=6952&moduleId=1946" target="_blank">Upload a Word Document Content File</a>
+        <a href="https://www.jcarron.ca:3434/uploadworddocument?orgUnitId=15914633&moduleId=115468977" target="_blank">Upload a Word Document Content File</a>
         <br />
-        <a href="https://localhost:3434/uploadprofileimage?userId=172" target="_blank">Upload a Profile Image</a>
+        <a href="https://www.jcarron.ca:3434/uploadprofileimage?userId=263726" target="_blank">Upload a Profile Image</a>
         <script>
             function getParameterByName(name, url) {
                 if (!url) url = window.location.href;
