--- a/html/courseimport-cim.html
+++ b/html/courseimport-cim.html
@@ -7,8 +7,8 @@
     </head>
     <body>
         <h3>Select an import package:</h3>
-        <input type="radio" name="package" value="d2l-package1.zip">Import Package 1<br />
-        <input type="radio" name="package" value="d2l-package2.zip">Import Package 2<br />
+        <input type="radio" name="package" value="d2l-sample-package1.zip">Import Package 1<br />
+        <input type="radio" name="package" value="d2l-sample-package2.zip">Import Package 2<br />
         <div hidden>
             <form id="importForm" method="POST">
                 <input type="hidden" name="lti_message_type" />
@@ -30,7 +30,7 @@
         $( document ).ready(function() {
             $('#submitFormButton').click( function() {
                  $.ajax({
-                    url: "/getcourseimportdetails",
+                    url: "/bsi/getcourseimportdetails",
                     data: {
                         package: $("input[name='package']:checked").val()
                     },
